# cocoa

./: .clang-format  .flake8  .gitignore  CMakeLists.txt  README.md  buoyantrun.py  coupledrun.py  couplingmedrun.py  couplingsimplerun.py  fd1dplot.py  fd1drun.py  proxpderun.py  py_test.py  run_cmake-template.bash  run_cmake.bash
.github/workflows/: cmake-single-platform.yml
app/: app_buoyant.cpp  app_chtm.cpp  app_chts.cpp  app_custom.cpp  app_cyclic.cpp  app_fd1d.cpp  app_fd2d.cpp  app_fd2d_custom.cpp  app_med_bd.cpp  app_ns.cpp  app_oforg.cpp  app_oforg_bd.cpp  app_proxpde.cpp  app_proxpde_chtm.cpp  app_proxpde_chts.cpp  app_proxpde_custom.cpp  app_simple.cpp
cmake/: .gitignore  FindOpenFOAMorg.cmake  cocoa-config.cmake.in  component.py  generate_of_components.py  generate_oforg_components.py
data/: proxpde1.yaml  proxpde2.yaml  proxpde_buoyant_heat.yaml  proxpde_buoyant_ns.yaml  proxpde_hc.yaml  proxpde_heat.yaml  proxpde_med_bd1.yaml  proxpde_med_bd2.yaml  proxpde_ns.yaml
data/oforg1/system/: controlDict
data/oforg_channel1/0/: U  nut  omega  p
data/oforg_channel1/system/: blockMeshDict  controlDict
data/oforg_channel2/0/: epsilon  k  nuTilda
data/oforg_channel2/constant/: momentumTransport
data/oforg_channel2/system/: blockMeshDict
python/: bindings.cpp
python/app/: buoyantrun.py  couplingmedrun.py  couplingsimplerun.py  customrun.py  fd1d2vrun.py  fd1drun.py  fd2drun.py  fdutils.py  fvrun.py  medbdrun.py  oforgrun.py  proxpderun.py
spack-env/: spack-template.yaml  spack.yaml
src/: block_mesh.cpp  coupling_factory.cpp  coupling_factory.hpp  coupling_manager.cpp  coupling_manager.hpp  coupling_med.cpp  coupling_med.hpp  coupling_simple.cpp  coupling_simple.hpp  defs.hpp.in  enums.hpp  fdutils.hpp  field_coupling.hpp  field_factory.cpp  field_factory.hpp  field_med.cpp  field_med.hpp  la.cpp  la.hpp  main.cpp  manager_med.cpp  manager_med.hpp  med_field.cpp  med_field.hpp  med_manager.cpp  med_manager.hpp  med_mesh.cpp  med_mesh.hpp  mesh_coupling.hpp  mesh_factory.cpp  mesh_med.cpp  mesh_med.hpp  plugins.hpp.in  problem.hpp  problem_factory.cpp  problem_factory.hpp  problem_fd1d.cpp  problem_fd1d.hpp  problem_femus.hpp  problem_oforg.cpp  (+7 more)
src/coupling/: coupling_factory.cpp  coupling_manager.hpp  coupling_med.cpp  coupling_med.hpp  coupling_simple.cpp  coupling_simple.hpp  field_coupling.hpp  field_factory.cpp  field_med.cpp  field_med.hpp  mesh_coupling.hpp  mesh_factory.cpp  mesh_med.cpp  mesh_med.hpp
src/problem/: fdutils.cpp  fdutils.hpp  problem.hpp  problem_factory.cpp  problem_fd1d.cpp  problem_fd1d.hpp  problem_fd2d.cpp  problem_fd2d.hpp  problem_femus.hpp  problem_oforg.cpp  problem_oforg.hpp  problem_proxpde.cpp  problem_proxpde.hpp
